--- a/www/assets/css/bootstrap.css
+++ b/www/assets/css/bootstrap.css
@@ -1113,9 +1113,11 @@ a:focus {
 figure {
   margin: 0;
 }
+/*
 img {
   vertical-align: middle;
 }
+*/
 .img-responsive,
 .thumbnail > img,
 .thumbnail a > img,
