--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ h5,
 h6 {
     margin: 0;
     font-family: 'Raleway', sans-serif;
-    color:#1a1a1a;
+    color:#142441;
     margin-bottom: 10px;
 }
 
